# rustykeys

./: .gitignore  Cargo.toml  todo.txt
src/: chords.rs  intervals.rs  main.rs  midi.rs  scales.rs  synth.rs  utils.rs
