[package]
name = "rustykeys"
version = "0.1.0"
authors = ["Cass May <cass@cassm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

midir = "0.5.0"
lazy_static = "1.4.0"
ordinal = "0.2.2"
timer = "0.1.3"
chrono = "0.4.9"
