[package]
name = "rustykeys"
version = "0.1.0"
authors = ["Cass May <cass@cassm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

midir = "0.5.0"
lazy_static = "1.4.0"
ordinal = "0.2.2"
timer = "0.1.3"
chrono = "0.4.9"
rand = "0.7.2"
dialoguer = "0.4.0"
termion = "1.5.3"
ndarray = "0.13.0"
pitch_calc = "0.11.0"
portaudio = "0.7.0"
